# ChatGPT_Automation

./: pyproject.toml
chatgpt_automation/: chatgpt_client.py  helpers.py
