[tool.poetry]
name = "chatgpt_automation"
version = "0.1.0"
description = ""
authors = ["Hai Dang <hopthucuahaidang@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
undetected-chromedriver = "^3.5.3"
ichrome = "^3.2.0"
selenium = "^4.13.0"
chatgptpy = "^1.0.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[project.urls]
Source = "https://github.com/haidang/ChatGPT_Automation"